# rvn-tools

./: Cargo.toml  README.md
crates/rvn-core-info/: Cargo.toml
crates/rvn-core-info/src/: lib.rs
crates/rvn-core-inspect/: Cargo.toml
crates/rvn-core-kernel/: Cargo.toml
crates/rvn-core-kernel/src/: cpu_add.rs  cpu_attention.rs  cpu_gelu.rs  cpu_inspect.rs  cpu_matmul.rs  cpu_rmsnorm.rs  cpu_silu.rs  cpu_softmax.rs  lib.rs
crates/rvn-core-tensor/: Cargo.toml
crates/rvn-core-tensor/src/: lib.rs
tools/rvn-info/: Cargo.toml
tools/rvn-info/src/: main.rs
