[package]
name                    = "rvn-core-kernel"
version.workspace       = true
edition.workspace       = true
description.workspace   = true
license.workspace       = true
homepage.workspace      = true
repository.workspace    = true
keywords.workspace      = true
categories.workspace    = true
authors.workspace       = true

[dependencies]
libc                = { workspace = true }
tracing-subscriber  = { workspace = true }
anyhow              = { workspace = true }
log                 = { workspace = true }
env_logger          = { workspace = true }
